# fastdds_dynamic_type_receiver

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
src/: data_id.h  dynamic_data_to_std_data.cpp  dynamic_data_to_std_data.h  dynamic_type_receiver.cpp  dynamic_type_receiver.h  enum.h  event.cpp  event.h  gui.cpp  gui.fbp  gui.h  main_form.cpp  main_form.h  read_only_sequence.cpp  read_only_sequence.h  reader_creation_wizard_dialog.cpp  reader_creation_wizard_dialog.h  resource.rc  utils.h  view.cpp  view.h
src/widget/: data_structure_view_ctrl.cpp  hex_view_ctrl.cpp  hex_view_ctrl.h  ownership_kind_prop.cpp  ownership_kind_prop.h  prop.cpp  prop.h  reliability_kind_prop.cpp  reliability_kind_prop.h  sequence_view_dialog.cpp  sequence_view_dialog.h
